--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1.2rem 4rem;
+  padding: 1.2rem 3.5rem;
   font-family: neu;
   width: 100%;
   position: fixed;
@@ -94,7 +94,7 @@ nav .nav2 h4 i {
 
 @media (max-width: 600px) {
   nav {
-    padding: 1rem 1.5rem;
+    padding: 1rem 1.2rem;
   }
   nav .logo img {
     width: 25px;
@@ -108,13 +108,15 @@ nav .nav2 h4 i {
   nav .nav2 {
     display: flex;
     align-items: center;
-    margin-right: 0.5rem;
-    gap: 2rem;
+    gap: 1.25rem;
   }
   nav .nav2 h4 {
     font-size: 1.1rem;
     cursor: pointer;
     font-weight: 100;
     color: rgb(227, 227, 227);
+  }
+  nav .nav2 svg {
+    width: 1.2rem;
   }
 }/*# sourceMappingURL=style.css.map */
